--- a/bilio_backend/configs/config.yaml
+++ b/bilio_backend/configs/config.yaml
@@ -6,6 +6,7 @@ server:
   readTimeout: 5s
   writeTimeout: 10s
   idleTimeout: 120s
+  shutdownTimeout: 15s
 database:
   url: "postgresql://user:password@localhost:5432/bilio?schema=public"
 logging:
