--- a/bilio_frontend/package.json
+++ b/bilio_frontend/package.json
@@ -28,8 +28,10 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.553.0",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
