--- a/bilio_frontend/package.json
+++ b/bilio_frontend/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.553.0",
     "next": "15.5.6",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -41,7 +42,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
